@@ -13,7 +13,7 @@ network = OsgEarthNet
 *.channelController.connectionColor = "#0000FF40"
 *.cow[*].modelURL = "cow.osgb.2.scale.-90,0,90.rot.0,0,-15e-1.trans"
 *.cow[*].labelColor = "#ffff00ff"
-*.cow[*].trailColor = "#000000ff"
+*.cow[*].trailColor = "#00000088"
 *.cow[*].trailLength = 1000
 #*.cow[*].showTxRange = false
 *.cow[*].rangeColor = "#ff000040"
@@ -21,8 +21,7 @@ network = OsgEarthNet
 *.cow[*].speed = 8mps
 *.cow[*].startX = uniform(10m, 240m)
 *.cow[*].startY = uniform(10m, 240m)
-*.cow[*].transmissionAnimUrl = "bubble.osgb.7.scale"
-*.cow[*].transmissionDuration = 1s
+*.cow[*].transmissionDuration = 0.5s
 *.cow[*].transmissionColor = "red"
 
 [Config BostonStreets]
